# mysocial-core

./: CLAUDE.md  Cargo.toml  fix_priorities.sh  migration_priorities.json  migration_report.txt  migration_status.sh  next_steps.sh  organize_crates.sh  verify_imports.sh  verify_sui_indexer_alt_restorer.sh  verify_sui_json_rpc_tests.sh  verify_sui_single_node_benchmark.sh
.cargo/: config.toml
crates/: watch_20250226-094335
crates/migrated/: README.md  sui-config.migration-status.json  sui-json.migration-status.json
crates/migrated/complete/: mysocial-core  mysocial-indexer  mysocial-protocol-config  mysocial-protocol-config-macros  sui-benchmark  sui-cluster-test  sui-config  sui-e2e-tests  sui-indexer-alt-restorer  sui-json  sui-json-rpc  sui-json-rpc-tests  sui-json-rpc-types  sui-keys  sui-move  sui-node  sui-replay  sui-sdk  sui-simulator  sui-single-node-benchmark  sui-snapshot  sui-storage  sui-surfer  sui-telemetry  sui-tool  sui-transactional-test-runner
crates/migrated/needs-migration/: mysocial-types  sui-adapter-transactional-tests  sui-analytics-indexer  sui-analytics-indexer-derive  sui-archival  sui-authority-aggregation  sui-aws-orchestrator  sui-axelar-cgp  sui-bridge  sui-bridge-cli  sui-bridge-indexer  sui-bridge-watchdog  sui-core  sui-cost  sui-deepbook-indexer  sui-default-config  sui-edge-proxy  sui-enum-compat-util  sui-faucet  sui-field-count  sui-field-count-derive  sui-framework  sui-framework-snapshot  sui-framework-tests  sui-genesis-builder  sui-graphql-e2e-tests  sui-graphql-rpc-client  sui-graphql-rpc-headers  sui-http  sui-indexer-alt-e2e-tests  sui-indexer-alt-jsonrpc  sui-indexer-alt-metrics  sui-indexer-alt-schema  sui-indexer-builder  sui-json-rpc-api  sui-kvstore  sui-light-client  sui-metric-checker  sui-move-build  sui-move-lsp  (+26 more)
crates/migrated/priorities/: sui-data-ingestion  sui-data-ingestion-core  sui-graphql-rpc  sui-indexer-alt  sui-indexer-alt-framework  sui-macros  sui-name-service  sui-network  sui-open-rpc  sui-package-resolver  sui-pg-db  sui-tls
crates/mysocial-config/: Cargo.toml
crates/mysocial-core/: Cargo.toml
crates/mysocial-core/src/: alias.rs  lib.rs
crates/mysocial-core/tests/: compatibility_tests.rs  integration_tests.rs  test_mysocial_core.sh
crates/mysocial-genesis-builder/: Cargo.toml
crates/mysocial-genesis-builder/src/: lib.rs  tests.rs  validator_info.rs
crates/mysocial-genesis-builder/tests/: integration_test.rs
crates/mysocial-indexer/: Cargo.toml  README.md
crates/mysocial-indexer/src/: lib.rs  main.rs
crates/mysocial-json/: Cargo.toml
crates/mysocial-json-rpc-api/: Cargo.toml
crates/mysocial-json-rpc-api/src/: bridge.rs  coin.rs  extended.rs  governance.rs  indexer.rs  lib.rs  move_utils.rs  read.rs  transaction_builder.rs  write.rs
crates/mysocial-name-service/: Cargo.toml
crates/mysocial-name-service/src/: lib.rs
crates/mysocial-network/: Cargo.toml  build.rs
crates/mysocial-network/src/: api.rs  lib.rs  utils.rs
crates/mysocial-network/src/discovery/: builder.rs  metrics.rs  mod.rs  server.rs  tests.rs
crates/mysocial-network/src/randomness/: auth.rs  builder.rs  metrics.rs  mod.rs  server.rs  tests.rs
crates/mysocial-network/src/state_sync/: builder.rs  metrics.rs  mod.rs  server.rs  tests.rs
crates/mysocial-protocol-config/: Cargo.toml
crates/mysocial-protocol-config-macros/: Cargo.toml
crates/mysocial-protocol-config-macros/src/: lib.rs
crates/mysocial-protocol-config/src/: lib.rs
crates/mysocial-types/: Cargo.toml
crates/mysocial-types/src/: README.md  base_types.rs  crypto.rs  digests.rs  id.rs  lib.rs  mysocial_serde.rs  object.rs
crates/mysten-common/src/: metrics.rs
crates/sui-analytics-indexer/: Cargo.toml
crates/sui-archival/: Cargo.toml
crates/sui-authority-aggregation/: Cargo.toml
crates/sui-authority-aggregation/src/: lib.rs
crates/sui-benchmark/: Cargo.toml
crates/sui-cluster-test/: Cargo.toml
crates/sui-config/: Cargo.toml
crates/sui-e2e-tests/: Cargo.toml
crates/sui-framework/: Cargo.toml
crates/sui-indexer-alt-restorer/: Cargo.toml
crates/sui-json/: Cargo.toml
crates/sui-json-rpc/: Cargo.toml
crates/sui-json-rpc-tests/: Cargo.toml
crates/sui-json-rpc-tests/tests/: balance_changes_tests.rs  rpc_server_tests.rs  transaction_tests.rs
crates/sui-json-rpc-types/: Cargo.toml
crates/sui-keys/: Cargo.toml
crates/sui-move/: Cargo.toml
crates/sui-move-build/: Cargo.toml
crates/sui-node/: Cargo.toml
crates/sui-package-resolver/: Cargo.toml
crates/sui-package-resolver/src/: error.rs  lib.rs
crates/sui-protocol-config/: Cargo.toml
crates/sui-protocol-config-macros/: Cargo.toml
crates/sui-replay/: Cargo.toml
crates/sui-sdk/: Cargo.toml
crates/sui-simulator/: Cargo.toml
crates/sui-single-node-benchmark/: Cargo.toml
crates/sui-snapshot/: Cargo.toml
crates/sui-storage/: Cargo.toml
crates/sui-surfer/: Cargo.toml
crates/sui-surfer/src/: surf_strategy.rs  surfer_state.rs  surfer_task.rs
crates/sui-swarm-config/: Cargo.toml
crates/sui-swarm-config/src/: genesis_config.rs  network_config.rs  network_config_builder.rs  node_config_builder.rs  test_utils.rs
crates/sui-telemetry/: Cargo.toml
crates/sui-test-transaction-builder/: Cargo.toml
crates/sui-test-transaction-builder/src/: lib.rs
crates/sui-tool/: Cargo.toml
crates/sui-transaction-checks/: Cargo.toml
crates/sui-transaction-checks/src/: deny.rs  lib.rs
crates/sui-transactional-test-runner/: Cargo.toml
crates/test-cluster/: Cargo.toml
crates/transaction-fuzzer/: Cargo.toml
crates/transaction-fuzzer/src/: account_universe.rs  executor.rs  lib.rs  programmable_transaction_gen.rs  transaction_data_gen.rs  type_arg_fuzzer.rs
crates/transaction-fuzzer/src/account_universe/: account.rs  transfer_gen.rs
scripts/: migration_dashboard.sh  next_migration_targets.sh  next_steps.sh  organize_crates.sh  test_isolated_migration.sh  test_migration.sh  verify_migration.sh
scripts/migrate/: README.md  check_crate_status.sh  migrate_crate.sh  migration_status.sh  test_all_migrations.sh  test_isolated_migration.sh
(+82 files in other folders)
