[package]
name = "mysocial-json"
version = "0.0.0"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
bcs.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

sui-types.workspace = true
mysocial-types.workspace = true

move-binary-format.workspace = true
move-bytecode-utils.workspace = true
move-core-types.workspace = true
fastcrypto.workspace = true

[dev-dependencies]
test-fuzz.workspace = true
sui-move-build.workspace = true
sui-framework.workspace = true
