[package]
name = "sui-network" # Keep original name for compatibility
version = "0.0.0"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
anemo.workspace = true
anemo-tower.workspace = true
governor.workspace = true
serde.workspace = true
tonic.workspace = true
dashmap.workspace = true
tower.workspace = true
shared-crypto.workspace = true

# Use both MySocial and Sui dependencies for compatibility
mysocial-archival = { path = "../mysocial-archival", optional = true }
mysocial-macros = { path = "../mysocial-macros", optional = true }
mysocial-storage = { path = "../mysocial-storage", optional = true }
mysocial-types = { workspace = true }
mysocial-config = { path = "../mysocial-config", optional = true }
mysocial-swarm-config = { path = "../mysocial-swarm-config", optional = true }

# Keep original dependencies for backward compatibility
sui-archival.workspace = true
sui-macros.workspace = true
sui-storage.workspace = true
sui-types.workspace = true  # Keep for backward compatibility
sui-config.workspace = true
sui-swarm-config.workspace = true

arc-swap.workspace = true
bcs.workspace = true
bytes.workspace = true
fastcrypto.workspace = true
fastcrypto-tbls.workspace = true
mysten-common.workspace = true
mysten-network.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
futures.workspace = true
tap.workspace = true
rand.workspace = true
anyhow.workspace = true
prometheus.workspace = true
mysten-metrics.workspace = true

[build-dependencies]
anemo-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
sui-macros.workspace = true
telemetry-subscribers.workspace = true
tokio = { workspace = true, features = ["test-util"] }
ed25519-consensus.workspace = true
tempfile = "3.3.0"

[features]
default = []
use-mysocial = ["mysocial-archival", "mysocial-macros", "mysocial-storage", "mysocial-config", "mysocial-swarm-config"]

# Migration status: In Progress
# This crate is being migrated to use mysocial-types
# We're maintaining both dependencies for backward compatibility