[package]
name = "mysocial-protocol-config"
version = "0.1.0"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
serde.workspace = true
tracing.workspace = true
serde_with.workspace = true
mysocial-protocol-config-macros = { path = "../mysocial-protocol-config-macros" }
schemars.workspace = true
insta.workspace = true
clap.workspace = true
move-vm-config.workspace = true
serde-env.workspace = true

[dev-dependencies]
insta.workspace = true