[package]
name = "sui-authority-aggregation"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mysocial-types = { workspace = true }
sui-types.workspace = true  # Keep for backward compatibility
mysten-metrics.workspace = true
tokio.workspace = true
tracing.workspace = true
futures.workspace = true
