[package]
name = "sui-json-rpc-tests"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
move-package.workspace = true
move-core-types.workspace = true
sui-config.workspace = true
mysocial-core.workspace = true
sui-core.workspace = true # Keep for backward compatibility
sui-keys.workspace = true
sui-move-build.workspace = true
sui-test-transaction-builder.workspace = true
sui-sdk.workspace = true
sui-macros.workspace = true
sui-simulator.workspace = true
sui-json.workspace = true
sui-json-rpc.workspace = true
sui-json-rpc-api.workspace = true
sui-json-rpc-types.workspace = true
sui-open-rpc.workspace = true
sui-open-rpc-macros.workspace = true
mysocial-protocol-config.workspace = true
sui-protocol-config.workspace = true # Keep for backward compatibility
sui-swarm-config.workspace = true
mysocial-types.workspace = true
sui-types.workspace = true # Keep for backward compatibility
test-cluster.workspace = true
telemetry-subscribers.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
hyper.workspace = true
jsonrpsee.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
shared-crypto.workspace = true
