[package]
name = "sui-package-resolver" # Keep original name for compatibility
version = "0.1.0"
edition = "2021"
authors = ["The Social Proof Foundation <brandon@socialproof.foundation>"]
license = "Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
bcs.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
# TODO: `move-command-line-common` is used for `ErrorBitset`. We should
# refactor the crate into a `move-utils` at some point and use that instead
# here once we do.
move-command-line-common.workspace = true
mysocial-types = { workspace = true }
sui-types.workspace = true  # Keep for backward compatibility
thiserror.workspace = true
sui-rpc-api.workspace = true
tokio.workspace = true
eyre.workspace = true
serde.workspace = true
lru.workspace = true

[dev-dependencies]
hyper.workspace = true
insta.workspace = true
move-compiler.workspace = true
serde_json.workspace = true
sui-move-build.workspace = true
tower.workspace = true

# Migration status: Complete
# This crate has been fully migrated to use mysocial-types
# All imports are now using mysocial-types instead of sui-types,
# but we maintain both dependencies for backward compatibility
