[package]
name = "sui-surfer"
version.workspace = true
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
mysocial-core = { workspace = true, package = "sui-core" }  # Migrated
sui-core.workspace = true  # Keep for backward compatibility
sui-swarm-config.workspace = true
sui-json-rpc-types.workspace = true
sui-move-build.workspace = true
mysocial-protocol-config = { workspace = true, package = "sui-protocol-config" }  # Migrated
sui-protocol-config.workspace = true  # Keep for backward compatibility
mysocial-types = { workspace = true, package = "sui-types" }  # Migrated
sui-types = { workspace = true }  # Keep for backward compatibility
test-cluster.workspace = true

async-trait.workspace = true
bcs.workspace = true
clap.workspace = true
futures.workspace = true
indexmap.workspace = true
rand.workspace = true
tokio = { workspace = true, features = ["full", "tracing", "test-util"] }
tracing.workspace = true

move-binary-format.workspace = true
move-core-types.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
prometheus.workspace = true
sui-macros.workspace = true
sui-simulator.workspace = true

move-package.workspace = true
