[package]
name = "sui-swarm-config"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[lints]
workspace = true

[dependencies]
anemo.workspace = true
anyhow.workspace = true
bcs.workspace = true
fastcrypto.workspace = true
rand.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tracing.workspace = true
prometheus.workspace = true

move-bytecode-utils.workspace = true
shared-crypto.workspace = true
mysocial-config = { path = "../mysocial-config" }
sui-config.workspace = true  # Keep for backward compatibility
sui-macros.workspace = true
mysocial-protocol-config = { path = "../mysocial-protocol-config" }
sui-protocol-config.workspace = true  # Keep for backward compatibility
mysocial-types = { path = "../mysocial-types" }
sui-types.workspace = true  # Keep for backward compatibility
sui-genesis-builder.workspace = true
sui-rpc-api.workspace = true

[target.'cfg(msim)'.dependencies]
sui-simulator.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

sui-execution.workspace = true
