[package]
name = "sui-test-transaction-builder"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
bcs.workspace = true

shared-crypto.workspace = true
sui-genesis-builder.workspace = true
sui-move-build.workspace = true
sui-sdk.workspace = true
mysocial-types = { path = "../mysocial-types" }
sui-types.workspace = true  # Keep for backward compatibility

move-core-types.workspace = true
