[package]
name = "sui-transaction-checks"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
once_cell.workspace = true
sui-macros.workspace = true
mysocial-config = { path = "../mysocial-config" }
sui-config.workspace = true  # Keep for backward compatibility
mysocial-protocol-config = { path = "../mysocial-protocol-config" }
sui-protocol-config.workspace = true  # Keep for backward compatibility
mysocial-types = { path = "../mysocial-types" }
sui-types.workspace = true  # Keep for backward compatibility
tracing.workspace = true
sui-execution.workspace = true
fastcrypto-zkp.workspace = true
