[package]
name = "transaction-fuzzer"
version = "0.1.0"
edition = "2021"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Tool to fuzz the system with randomly generated transactions"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
proptest.workspace = true
proptest-derive.workspace = true
rand.workspace = true
move-core-types.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true

once_cell.workspace = true
mysocial-core = { workspace = true, package = "sui-core" }  # Migrated
sui-core.workspace = true  # Keep for backward compatibility
mysocial-protocol-config = { workspace = true, package = "sui-protocol-config" }  # Migrated
sui-protocol-config.workspace = true  # Keep for backward compatibility
mysocial-types = { workspace = true, package = "sui-types", features = ["fuzzing"] }  # Migrated
sui-types = { workspace = true, features = ["fuzzing"] }  # Keep for backward compatibility
sui-move-build.workspace = true


[dev-dependencies]
sui-protocol-config.workspace = true
